--- a/menu.html
+++ b/menu.html
@@ -812,7 +812,7 @@
                 description: "Espresso kuat dengan crema sempurna dari biji kopi Arabika premium",
                 price: 28000,
                 category: "hot-coffee",
-                image: "image/espresso.jpg"
+                image: "image/Espresso.jpg"
             },
             {
                 id: 2,
@@ -1330,4 +1330,5 @@
         };
     </script>
 </body>
+
 </html>
